--- a/ProjetXamarinWear/ProjetXamarinWear.csproj
+++ b/ProjetXamarinWear/ProjetXamarinWear.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="akavache" Version="6.9.10" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Syncfusion.Xamarin.SfMaps" Version="17.3.0.29" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.991211" />  
