Ajout de Device.BeginInvokeOnMainThread pour gérant l'exception de UWP. L'application marche sur ANdroid et Windows UWP.

--- a/ProjetXamarinWear/ProjetXamarinWear.csproj
+++ b/ProjetXamarinWear/ProjetXamarinWear.csproj
@@ -5,6 +5,10 @@
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="akavache" Version="6.9.10" />
     <PackageReference Include="akavache.core" Version="6.9.10" />
